Refactor project configuration

--- a/src/locales/en/blog.json
+++ b/src/locales/en/blog.json
@@ -1,6 +1,6 @@
 {
   "metadata": {
-    "author": "Ayush Singh",
+    "author": "Shydev",
     "readingTime": "{{minutes}} min read",
     "publishedOn": "Published on",
     "lastUpdated": "Last updated on"
