--- a/src/locales/es/blog.json
+++ b/src/locales/es/blog.json
@@ -1,6 +1,6 @@
 {
   "metadata": {
-    "author": "Ayush Singh",
+    "author": "Shydev",
     "readingTime": "{{minutes}} min de lectura",
     "publishedOn": "Publicado el",
     "lastUpdated": "Última actualización el"
