refactor: update music links to markdown format

--- a/src/content/2-5-vps.mdx
+++ b/src/content/2-5-vps.mdx
@@ -11,12 +11,10 @@ cover: "/cover/2-5-vps.png"
 
 i’m going with vultr because it’s cheap. ofc there are better and free options but i want to avoid them atp. topped up my account with $5 and spinning a $2.5 debian x13 x64 vps right now.
 
-my vultr referral link — https://www.vultr.com/?ref=9797860
-
 music i’m on —
 
-- https://music.apple.com/in/album/a-familiar-taste/395740920?i=395740929
-- https://music.apple.com/in/album/narkotik-kal/1391905031?i=1391905036
+- [a familiar taste](https://music.apple.com/in/album/a-familiar-taste/395740920?i=395740929)
+- [narkotik kal](https://music.apple.com/in/album/narkotik-kal/1391905031?i=1391905036)
 
 ![](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*y7TtgQ1ZmIAvYaNBXGUqgg.png)
 
